--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,15 @@
 
 .nav {
   grid-area: n;
-  background-color: khaki;
+  background-color: burlywood;
+  padding: 20px;
 }
 
-.item {
+.item a {
   color: white;
+  text-decoration: none;
 }
 
-.item.active {
+.item a.active {
   color: gold;
 }
