--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,3 +1,12 @@
 .userPhoto {
     width: 100px;
 }
+
+.selectedPage {
+    font-weight: bold;
+}
+
+.pageButton {
+    padding: 10px;
+    cursor: pointer;
+}
